# stately

./: Cargo.toml  README.md
design/: builder.md  diagrams.drawio  states.md
examples/: CYCLICAL.md  EMAILS.md  README.md  cyclical.rs  emails.rs
src/: lib.rs  state_machine.rs
src/builder/: builder.rs  error.rs  mod.rs  result.rs  types.rs
src/builder/build_rules/: initial.rs  mod.rs  state.rs
src/builder/build_rules/transitions/: builder.rs  mod.rs  multi.rs
src/builder/build_states/: builder.rs  initial.rs  mod.rs
src/graph/: mod.rs
src/state_machine/: definition.rs  detect.rs  error.rs  fsm.rs  machine.rs  mod.rs  result.rs
src/tests/: builder.rs  invalid.rs  mod.rs  state_machine.rs
src/tests/invalid/: given_a_new_state_machine_builder_it_should_have_at_least_one_state.rs  given_a_new_state_machine_builder_it_should_have_at_least_one_state.stderr  given_a_new_state_machine_builder_it_should_not_be_possible_to_add_a_normal_state_first.rs  given_a_new_state_machine_builder_it_should_not_be_possible_to_add_a_normal_state_first.stderr  given_a_state_it_should_define_any_or_no_triggers_first.rs  given_a_state_it_should_define_any_or_no_triggers_first.stderr  given_a_state_it_should_have_at_least_one_transition.rs  given_a_state_it_should_have_at_least_one_transition.stderr  given_an_end_state_it_should_define_any_or_no_triggers.rs  given_an_end_state_it_should_define_any_or_no_triggers.stderr  given_an_end_state_it_should_not_be_possible_to_add_a_transition.rs  given_an_end_state_it_should_not_be_possible_to_add_a_transition.stderr
(+23 files in other folders)
