[package]
name = "stately"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Nejat/stately"
description = "Finite State Machine"
authors = ["nejatoz@gmail.com"]
keywords = ["fsm", "finite-state-machine", "state-machine"]
categories = ["Algorithms", "Rust Patterns"]

[dependencies]
bitflags = "2"
thiserror = "1"