[package]
name = "stately"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Nejat/stately"
description = "Finite State Machine"
authors = ["nejatoz@gmail.com"]
keywords = ["fsm", "finite-state-machine", "state-machine"]
categories = ["Algorithms", "Rust Patterns"]

[dependencies]
bitflags = "2"
thiserror = "1"

[dev-dependencies]
once_cell = "1"
trybuild = { version = "1", features = ["diff"] }
version-sync = "0.9"
walkdir = "2"

[features]
nightly = []